WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213439
Crash under ScrollController::startSnapRubberbandTimer() firing
https://bugs.webkit.org/show_bug.cgi?id=213439
Summary
Crash under ScrollController::startSnapRubberbandTimer() firing
Simon Fraser (smfr)
Reported
2020-06-20 17:03:43 PDT
Crash under ScrollController::startSnapRubberbandTimer() firing
Attachments
Patch
(5.28 KB, patch)
2020-06-20 17:06 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-06-20 17:06:28 PDT
Created
attachment 402406
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-06-20 17:06:33 PDT
<
rdar://problem/63986013
>
EWS
Comment 3
2020-06-20 19:14:01 PDT
Committed
r263322
: <
https://trac.webkit.org/changeset/263322
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402406
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug