Crash under ScrollController::startSnapRubberbandTimer() firing https://bugs.webkit.org/show_bug.cgi?id=213439 <rdar://problem/63986013>

Reviewed by Tim Horton.

A wholesale destruction of the ScrollingTree (e.g. via ScrollingCoordinatorMac::pageDestroyed()) never
ran the code to stop CFRunLoopTimers in ScrollController, which could lead to this crash.
Fix by calling removeAllNodes() in ThreadedScrollingTree::invalidate().

Add an assertion in ScrollController's destructor that stopAllTimers() has been called, and have
ScrollAnimator's destructor call stopAllTimers() too.

* page/scrolling/ScrollingTree.h:
* page/scrolling/ThreadedScrollingTree.cpp:
(WebCore::ThreadedScrollingTree::invalidate):
* platform/ScrollAnimator.cpp:
(WebCore::ScrollAnimator::~ScrollAnimator):
* platform/cocoa/ScrollController.h:
* platform/cocoa/ScrollController.mm:
(WebCore::ScrollController::~ScrollController):
(WebCore::ScrollController::stopAllTimers):


Canonical link: https://commits.webkit.org/226228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263322 268f45cc-cd09-0410-ab3c-d52691b4dbfc